objects/Opportunity.object
<CustomObject><businessProcesses>
        <fullName>Helix Sales Process</fullName>
        <description>Used for B2B Leads</description>
        <isActive>true</isActive>
        <values>
            <fullName>1%2E Prospecting %28Non-confidential intro%29</fullName>
        </values>
        <values>
            <fullName>2%2E Prospecting %28Confidential discussions%29</fullName>
        </values>
        <values>
            <fullName>3%2E Prospecting %28MOU%29</fullName>
        </values>
        <values>
            <fullName>4%2E Onboarding %28Product definition%29</fullName>
        </values>
        <values>
            <fullName>5%2E Onboarding %28Product development%29</fullName>
        </values>
        <values>
            <fullName>6%2E Onboarding %28Product testing%29</fullName>
        </values>
        <values>
            <fullName>7%2E Ready for Launch</fullName>
        </values>
        <values>
            <fullName>8%2E Launched</fullName>
        </values>
        <values>
            <fullName>X%2E Hold</fullName>
        </values>
        <values>
            <fullName>X%2E Inactive</fullName>
        </values>
        <values>
            <fullName>X%2E Lost</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Ability_to_pay__c</fullName>
        <inlineHelpText>Please score (1-5)</inlineHelpText>
        <label>Ability to pay</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Brand_equity__c</fullName>
        <inlineHelpText>Please rate (1-5)</inlineHelpText>
        <label>Brand equity</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Business_Legal2__c</fullName>
        <label>Business/ Legal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Consumer_base__c</fullName>
        <inlineHelpText>Please score (1-5)</inlineHelpText>
        <label>Consumer base</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Coverage_Check_Date__c</fullName>
        <description>Automatically filled in when "Coverage Check: Obtained &amp; Added" is checked</description>
        <inlineHelpText>Automatically filled in when "Coverage Check: Obtained &amp; Added" is checked</inlineHelpText>
        <label>Coverage Check: Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Coverage_Check_Obtained_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check only when Coverage Check is uploaded to the opportunity</description>
        <inlineHelpText>Check only when Coverage Check is uploaded to the opportunity</inlineHelpText>
        <label>Coverage Check: Obtained &amp; Added</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Definitive_Agreement_Date__c</fullName>
        <description>Automatically filled in when "Definitive Agreement: Obtained &amp; Added" is checked</description>
        <inlineHelpText>Automatically filled in when "Definitive Agreement: Obtained &amp; Added" is checked</inlineHelpText>
        <label>Definitive Agreement: Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Definitive_Agreement_Obtained_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check only when Definitive Agreement is uploaded to the opportunity</description>
        <inlineHelpText>Check only when Definitive Agreement is uploaded to the opportunity</inlineHelpText>
        <label>Definitive Agreement: Obtained &amp; Added</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Description_Business_Legal__c</fullName>
        <label>Description: Business/ Legal</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Description_Design__c</fullName>
        <label>Description: Design</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Description_Engineering__c</fullName>
        <label>Description: Engineering</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Description_Marketing__c</fullName>
        <label>Description: Marketing</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Description_Operations__c</fullName>
        <label>Description: Operations</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Description_Product__c</fullName>
        <label>Description: Product</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Description_Regulatory__c</fullName>
        <label>Description: Regulatory</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Description_Science__c</fullName>
        <label>Description: Science</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Design2__c</fullName>
        <label>Design</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Engineering2__c</fullName>
        <label>Engineering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Estimated_Number_of_Kits_Monthly__c</fullName>
        <label>Estimated Number of Kits (Monthly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Fills_a_need_gap__c</fullName>
        <inlineHelpText>Please score (1-5)</inlineHelpText>
        <label>Fills a need / gap</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>For_Discussion__c</fullName>
        <label>For Discussion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Innovation__c</fullName>
        <inlineHelpText>Please Score (1-5)</inlineHelpText>
        <label>Innovation</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Internal_commitment__c</fullName>
        <inlineHelpText>Please Score (1-5)</inlineHelpText>
        <label>Internal commitment</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Lead_Source_Details__c</fullName>
        <description>Used in Validation Rule when value contains "Please Specify"</description>
        <inlineHelpText>Used in Validation Rule when value contains "Please Specify"</inlineHelpText>
        <label>Lead Source Details</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Lost_Reason_Details__c</fullName>
        <description>Used when "Other" is selected</description>
        <inlineHelpText>Used when "Other" is selected</inlineHelpText>
        <label>Lost Reason Details</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Lost_Reasons__c</fullName>
        <label>Lost Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Prospect capabilities</fullName>
                </value>
                <value>
                    <fullName>Helix capabilities (data, tech)</fullName>
                </value>
                <value>
                    <fullName>Management buy-in</fullName>
                </value>
                <value>
                    <fullName>Legal issue (ie IP)</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Other platform</fullName>
                </value>
                <value>
                    <fullName>Other, please explain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>MOU_Date__c</fullName>
        <description>Automatically filled in when "MOU: Obtained &amp; Added" is checked</description>
        <inlineHelpText>Automatically filled in when "MOU: Obtained &amp; Added" is checked</inlineHelpText>
        <label>MOU: Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>MOU_Obtained_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check only when MOU is uploaded to the opportunity</description>
        <inlineHelpText>Check only when MOU is uploaded to the opportunity</inlineHelpText>
        <label>MOU: Obtained &amp; Added</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Market_Category__c</fullName>
        <description>Please define which market category the deal is</description>
        <inlineHelpText>Please define which market category the deal is</inlineHelpText>
        <label>Market Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market_Category</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Market_Sub_category__c</fullName>
        <description>Please define the Market Sub-category</description>
        <inlineHelpText>Please define the Market Sub-category</inlineHelpText>
        <label>Market Sub-category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Market_Sub_category</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Market_Sub_category_details__c</fullName>
        <label>Market Sub-category details</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Marketing2__c</fullName>
        <label>Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Month_1__c</fullName>
        <description>1st Month Projection</description>
        <inlineHelpText>1st Month Projection</inlineHelpText>
        <label>Month 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Month_2__c</fullName>
        <description>2nd Month Projection</description>
        <inlineHelpText>2nd Month Projection</inlineHelpText>
        <label>Month 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Month_3__c</fullName>
        <description>3rd Month Projection</description>
        <inlineHelpText>3rd Month Projection</inlineHelpText>
        <label>Month 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>NDA_Date__c</fullName>
        <description>Automatically filled in When " NDA: Obtained &amp; Added" is checked</description>
        <inlineHelpText>Automatically filled in When " NDA: Obtained &amp; Added" is checked</inlineHelpText>
        <label>NDA: Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>NDA_Obtained_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check only when NDA is uploaded to the opportunity</description>
        <inlineHelpText>Check only when NDA is uploaded to the opportunity</inlineHelpText>
        <label>NDA: Obtained &amp; Added</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Operations2__c</fullName>
        <label>Operations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Overall_Status__c</fullName>
        <label>Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green (on track to meet target launch)</fullName>
                </value>
                <value>
                    <fullName>Yellow (behind or needs attention)</fullName>
                </value>
                <value>
                    <fullName>Red (strong risk for missing timeline)</fullName>
                </value>
                <value>
                    <fullName>Gray (not started)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Priority_Prospect__c</fullName>
        <label>Priority Prospect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Probability_Description__c</fullName>
        <label>Probability Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Probability_of_launch__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Product2__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Product_market_fit__c</fullName>
        <inlineHelpText>Please Score (1-5)</inlineHelpText>
        <label>Product / market fit</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Product_savvy__c</fullName>
        <inlineHelpText>Please score (1-5)</inlineHelpText>
        <label>Product savvy</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Regulatory2__c</fullName>
        <label>Regulatory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Resources__c</fullName>
        <inlineHelpText>Please Score (1-5)</inlineHelpText>
        <label>Resources</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Science2__c</fullName>
        <label>Science</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Scientific_Eval_Date__c</fullName>
        <description>Automatically filled in when "Scientific Eval: Obtained &amp; Added" is checked</description>
        <inlineHelpText>Automatically filled in when "Scientific Eval: Obtained &amp; Added" is checked</inlineHelpText>
        <label>Scientific Eval: Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Scientific_Eval_Obtained_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check only when Scientific Eval is uploaded to the opportunity</description>
        <inlineHelpText>Check only when Scientific Eval is uploaded to the opportunity</inlineHelpText>
        <label>Scientific Eval: Obtained &amp; Added</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Seasonal_Product__c</fullName>
        <label>Seasonal Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status_Business_Legal2__c</fullName>
        <label>Status: Business/ Legal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green (on track to meet target launch)</fullName>
                </value>
                <value>
                    <fullName>Yellow (behind or needs attention)</fullName>
                </value>
                <value>
                    <fullName>Red (strong risk for missing timeline)</fullName>
                </value>
                <value>
                    <fullName>Gray (not started)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status_Design2__c</fullName>
        <label>Status: Design</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green (on track to meet target launch)</fullName>
                </value>
                <value>
                    <fullName>Yellow (behind or needs attention)</fullName>
                </value>
                <value>
                    <fullName>Red (strong risk for missing timeline)</fullName>
                </value>
                <value>
                    <fullName>Gray (not started)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status_Engineering2__c</fullName>
        <label>Status: Engineering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green (on track to meet target launch)</fullName>
                </value>
                <value>
                    <fullName>Yellow (behind or needs attention)</fullName>
                </value>
                <value>
                    <fullName>Red (strong risk for missing timeline)</fullName>
                </value>
                <value>
                    <fullName>Gray (not started)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status_Marketing2__c</fullName>
        <label>Status: Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green (on track to meet target launch)</fullName>
                </value>
                <value>
                    <fullName>Yellow (behind or needs attention)</fullName>
                </value>
                <value>
                    <fullName>Red (strong risk for missing timeline)</fullName>
                </value>
                <value>
                    <fullName>Gray (not started)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status_Operations2__c</fullName>
        <label>Status: Operations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green (on track to meet target launch)</fullName>
                </value>
                <value>
                    <fullName>Yellow (behind or needs attention)</fullName>
                </value>
                <value>
                    <fullName>Red (strong risk for missing timeline)</fullName>
                </value>
                <value>
                    <fullName>Gray (not started)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status_Product2__c</fullName>
        <label>Status: Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green (on track to meet target launch)</fullName>
                </value>
                <value>
                    <fullName>Yellow (behind or needs attention)</fullName>
                </value>
                <value>
                    <fullName>Red (strong risk for missing timeline)</fullName>
                </value>
                <value>
                    <fullName>Gray (not started)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status_Regulatory2__c</fullName>
        <label>Status: Regulatory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green (on track to meet target launch)</fullName>
                </value>
                <value>
                    <fullName>Yellow (behind or needs attention)</fullName>
                </value>
                <value>
                    <fullName>Red (strong risk for missing timeline)</fullName>
                </value>
                <value>
                    <fullName>Gray (not started)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status_Science2__c</fullName>
        <label>Status: Science</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green (on track to meet target launch)</fullName>
                </value>
                <value>
                    <fullName>Yellow (behind or needs attention)</fullName>
                </value>
                <value>
                    <fullName>Red (strong risk for missing timeline)</fullName>
                </value>
                <value>
                    <fullName>Gray (not started)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status_Summary__c</fullName>
        <label>Status Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Target_Launch_Date__c</fullName>
        <description>Date the client expects to launch</description>
        <inlineHelpText>Date the client expects to launch</inlineHelpText>
        <label>Target Launch Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Timing__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>Timing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Total_Weighted_Lead_Score__c</fullName>
        <formula>(Brand_equity__c *0.15)+( Consumer_base__c *0.10) + ( Trust__c *0.05)+ ( Innovation__c *0.05) + ( Product_savvy__c * 0.05) + ( Fills_a_need_gap__c * 0.15) + ( Product_market_fit__c * 0.15) + ( Ability_to_pay__c * 0.10) + ( Internal_commitment__c * 0.10) + ( Resources__c * 0.10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weighted Lead Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Trust__c</fullName>
        <inlineHelpText>Please Score (1-5)</inlineHelpText>
        <label>Trust</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Won_Reason_Details__c</fullName>
        <description>Used when "Other" is selected</description>
        <inlineHelpText>Used when "Other" is selected</inlineHelpText>
        <label>Won Reason Details</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Won_Reasons__c</fullName>
        <label>Won Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Marketing/promotional spend</fullName>
                </value>
                <value>
                    <fullName>Marketplace size</fullName>
                </value>
                <value>
                    <fullName>Data quality/quantity</fullName>
                </value>
                <value>
                    <fullName>Easy to do business</fullName>
                </value>
                <value>
                    <fullName>Other, please explain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><compactLayoutAssignment>New_Awesome_Companct_Layout</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews><listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews><listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews><listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews><listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>    </validationRules></CustomObject>